refactoring restapi
