# docs/swagger.yaml
@@ -1,20 +1,11 @@
 definitions:
-  container.ApiResponse:
-    properties:
-      data: {}
-      message:
-        type: string
-      status:
-        description: success | fail
-        type: string
-    type: object
   container.CreateContainerRequest:
     properties:
       command:
         example:
-        - '''/bin/sh'''
-        - '''-c'''
-        - '''echo hello; sleep 60'''
+        - /bin/sh
+        - -c
+        - echo hello; sleep 60
         items:
           type: string
         type: array
@@ -23,15 +14,15 @@ definitions:
         type: string
       mount:
         example:
-        - '''/host/dir:/container/dir'''
-        - '''/src:/dst'''
+        - /host/dir:/container/dir
+        - /src:/dst
         items:
           type: string
         type: array
       port:
         example:
-        - '''8080:80'''
-        - '''4443:443'''
+        - 8080:80
+        - 4443:443
         items:
           type: string
         type: array
@@ -40,9 +31,9 @@ definitions:
     properties:
       command:
         example:
-        - '''/bin/sh'''
-        - '''-c'''
-        - '''echo hello'''
+        - /bin/sh
+        - -c
+        - echo hello
         items:
           type: string
         type: array
@@ -55,24 +46,6 @@ definitions:
       interactive:
         example: true
         type: boolean
-    type: object
-  http.ApiResponse:
-    properties:
-      data: {}
-      message:
-        type: string
-      status:
-        description: success | fail
-        type: string
-    type: object
-  image.ApiResponse:
-    properties:
-      data: {}
-      message:
-        type: string
-      status:
-        description: success | fail
-        type: string
     type: object
   image.PullImageRequest:
     properties:
@@ -90,6 +63,15 @@ definitions:
     properties:
       image:
         example: alpine:latest
+        type: string
+    type: object
+  utils.ApiResponse:
+    properties:
+      data: {}
+      message:
+        type: string
+      status:
+        description: success | fail
         type: string
     type: object
 info:
@@ -113,7 +95,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/container.ApiResponse'
+            $ref: '#/definitions/utils.ApiResponse'
       summary: Create a container
       tags:
       - containers
@@ -130,7 +112,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/container.ApiResponse'
+            $ref: '#/definitions/utils.ApiResponse'
       summary: delete a container
       tags:
       - containers
@@ -153,7 +135,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/container.ApiResponse'
+            $ref: '#/definitions/utils.ApiResponse'
       summary: exec a container
       tags:
       - containers
@@ -176,7 +158,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/container.ApiResponse'
+            $ref: '#/definitions/utils.ApiResponse'
       summary: start a container
       tags:
       - containers
@@ -193,7 +175,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/container.ApiResponse'
+            $ref: '#/definitions/utils.ApiResponse'
       summary: stop a container
       tags:
       - containers
@@ -204,7 +186,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/http.ApiResponse'
+            $ref: '#/definitions/utils.ApiResponse'
       summary: apply hook
       tags:
       - Hooks
@@ -223,10 +205,10 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
-            $ref: '#/definitions/image.ApiResponse'
+            $ref: '#/definitions/utils.ApiResponse'
       summary: remove image
       tags:
       - image
@@ -247,7 +229,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/image.ApiResponse'
+            $ref: '#/definitions/utils.ApiResponse'
       summary: pull image
       tags:
       - image
