# internal/api/http/hook/model.go
@@ -1,7 +1,0 @@
-package http
-
-type ApiResponse struct {
-	Status  string `json:"status"` // success | fail
-	Message string `json:"message,omitempty"`
-	Data    any    `json:"data,omitempty"`
-}
